--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
             "email":"apuhlmann@paypal.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev-master",
     "scripts": {
         "test": "phpunit"
     },
